WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281789
Nullptr crash at WebCore::Style::Invalidator::invalidateStyleWithMatchElement
https://bugs.webkit.org/show_bug.cgi?id=281789
Summary
Nullptr crash at WebCore::Style::Invalidator::invalidateStyleWithMatchElement
p_choudhury
Reported
2024-10-18 15:49:24 PDT
Nullptr crash at WebCore::Style::Invalidator::invalidateStyleWithMatchElement
Attachments
Add attachment
proposed patch, testcase, etc.
p_choudhury
Comment 1
2024-10-18 15:49:39 PDT
rdar://137177811
p_choudhury
Comment 2
2024-10-18 15:57:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35464
EWS
Comment 3
2024-11-15 10:31:05 PST
Committed
286644@main
(936fafec3497): <
https://commits.webkit.org/286644@main
> Reviewed commits have been landed. Closing PR #35464 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug