Cherry-pick 286644@main (936fafec3497). https://bugs.webkit.org/show_bug.cgi?id=281789

Nullptr crash at WebCore::Style::Invalidator::invalidateStyleWithMatchElement
    https://bugs.webkit.org/show_bug.cgi?id=281789
    rdar://137177811

    Reviewed by Tim Nguyen.

    Do style invalidation for the element and its descendants if connected.

    * LayoutTests/fast/dom/Element/element-parentNode-crash-expected.txt: Added.
    * LayoutTests/fast/dom/Element/element-parentNode-crash.html: Added.
    * Source/WebCore/html/HTMLElement.cpp:
    (WebCore::HTMLElement::hidePopoverInternal):

    Canonical link: https://commits.webkit.org/286644@main

Canonical link: https://commits.webkit.org/282416.290@webkitglib/2.46